@@ -126,6 +126,7 @@ perl = 5.024
 strict = 0
 warnings = 0
 DBIx::Class = 0
+DBIx::Class::Candy = 0
 Log::Any = 1.045
 Import::Base = 0.012 ; Fixed using subs in imports
 
